# desafio-nology-2026-04

./: .env.example  .gitignore  README.md  docker-compose.yml  pyrightconfig.json
api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
api/src/: main.py
api/src/core/config/: __init__.py  env.py
api/src/core/db/: database.py
api/src/core/db/models/: cashback.py
api/src/modules/: __init__.py
api/src/modules/cashback/: __init__.py
api/src/modules/cashback/controllers/: __init__.py  cashback_controller.py
api/src/modules/cashback/repositories/: __init__.py  cashback_repository.py
api/src/modules/cashback/routes/: __init__.py  cashback_routes.py
api/src/modules/cashback/schemas/: __init__.py  cashback_schemas.py
api/src/modules/cashback/services/: __init__.py  cashback_service.py
api/src/modules/health/: __init__.py
api/src/modules/health/routes/: __init__.py  health_routes.py
web/: .env.example  README.md  index.html  orval.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/api/: interceptor.ts
web/src/config/: env-web.ts
web/src/lib/: query-client.ts
web/src/modules/cashback/: index.ts
web/src/modules/cashback/components/: cashback-form.tsx  cashback-result.tsx  cashback-toast.tsx  history-table.tsx
web/src/modules/cashback/pages/: cashback-page.tsx
web/src/providers/: app-provider.tsx  theme-provider.tsx
web/src/shared/components/: theme-toggle.tsx
web/src/utils/: masks.ts
